add new code page

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h> nwnwnwnwnwnwnwnwnwnwnwmmmmmmmmmmmmmm</h>
+    <h1>hello world my name </h1>
+    <h1>it's to easy :) </h1>
 </body>
 </html>
