add name in page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>hello world my name </h1>
     <h1>it's to easy :) </h1>
     <h1>i love m </h1>
+    <h1>Natthaphongg </h1>
+    <h1>print Hello world </h1>
 </body>
 </html>
